# ECU_TESTER

./: .gitignore  CLAUDE.md  HANDOVER.md  OPEN_DECISIONS.md  README.md  pm-sync.json
.claude/: launch.json
android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/drawable/: bd_badge.xml  bd_can_plot.xml  bd_coil.xml  bd_dial_face.xml  bd_dot_green.xml  bd_fan.xml  bd_frame.xml  bd_gdi.xml  bd_iac.xml  bd_iac_off.xml  bd_iac_on.xml  bd_indic.xml  bd_indic_circle.xml  bd_indic_circle_green.xml  bd_indic_circle_off.xml  bd_inj.xml  (+12 more)
docs/: ADDING_COMPONENTS.md  ANDROID_MIGRATION.md  ARCHITECTURE.md  M1_VERTICAL_SLICE.md  PROJECT_BRIEF.md  PROTOCOL.md  SETUP.md  SIMULATION.md
docs/design-refs/: README.md
docs/design-refs/ecu-intro/: ECU Tester Intro.dc.html  ecu-intro.jsx
firmware/ECU_Tester/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/ECU_Tester/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/ECU_Tester/main/include/: board_config.h  protocol.h
hardware/: README.md
tools/: create_issues.sh  prep_assets.sh  sim_server.py  ws_cmd_test.py
web/: README.md  app.js  index.html  style.css
web/css/: style.css
web/js/: app.js  diag.js  layout.js  live.js  protocol.js  sim.js  theme.js  websocket.js
web/js/components/: CoilBank.js  Gauge.js  IacPanel.js  InjectorBank.js  SimControls.js  StatusPanel.js  VoltageMeter.js  WaveformScope.js  glyphs.js
workflow/: General_Thoughts.md  Info.md
(+23 files in other folders)
